// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Admonition variants 1`] = `
"## Admonition variants

**Note:** This is a simple note with inline content.

**Warning: Breaking change**

The API endpoint has been deprecated.

**Tip:**

- Step one
- Step two
- Step three

**Coming Soon:** This feature is coming soon.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CTA 1`] = `
"## CTA

> **Get started with Neon**
>
> Create a free account and start building.
>
> [Sign up](https://console.neon.tech/signup)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CheckList and CheckItem 1`] = `
"## CheckList and CheckItem
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CodeTabs 1`] = `
"## CodeTabs

**Node.js**

\`\`\`javascript
const { Client } = require('pg');
const client = new Client(process.env.DATABASE_URL);
await client.connect();
\`\`\`

**Python**

\`\`\`python
import psycopg2
conn = psycopg2.connect(os.environ["DATABASE_URL"])
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CommunityBanner 1`] = `
"## CommunityBanner

Share your feedback: [Join Discord](https://discord.gg/neon)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > CompactCards 1`] = `
"## CompactCards

- [Next.js prompt](https://ranksmile.pl/prompts/nextjs-prompt.md): Copy a Next.js setup prompt
- [Django](https://ranksmile.pl/docs/guides/django): Open the Django guide
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Configure environment 1`] = `
"## Configure environment

Set the \`DATABASE_URL\` environment variable.

For more details, see the [driver documentation](https://ranksmile.pl/docs/serverless/serverless-driver).
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > DefinitionList 1`] = `
"## DefinitionList

Compute Unit (CU)
: A measure of computing resources (CPU and RAM) allocated to a Neon compute.

Endpoint
: The connection point for your database, providing the hostname and port for client connections.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > DetailIconCards 1`] = `
"## DetailIconCards

- [Prisma](https://ranksmile.pl/docs/guides/prisma): Connect Prisma ORM to Neon
- [Next.js](https://ranksmile.pl/docs/guides/nextjs): Build Next.js apps with Neon
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > DocsList 1`] = `
"## DocsList

**Related guides:**

- [Prisma integration](https://ranksmile.pl/docs/guides/prisma)
- [Drizzle ORM guide](https://ranksmile.pl/docs/guides/drizzle)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > FeatureList 1`] = `
"## FeatureList

### Instant provisioning

Create a database in milliseconds via API.

### Autoscaling

Scale compute up and down based on demand.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > HTML passthrough 1`] = `
"## HTML passthrough

<details>

<summary>**Expandable section**</summary>

Content inside a details/summary block that should pass through as HTML.

- Nested list item one
- Nested list item two

</details>

Inline link with description: [Example](https://example.com)

Line break in a table:

| Feature   | Status               |
| --------- | -------------------- |
| Branching | GA<br/>Available now |
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Ignored components 1`] = `
"## Ignored components

[View prompt](https://ranksmile.pl/prompts/test.md)




"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > InfoBlock 1`] = `
"## InfoBlock

This is important information inside an InfoBlock. It can contain **bold text** and [links](https://ranksmile.pl/docs/introduction).
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Installation 1`] = `
"## Installation

Method: \`npm install @neondatabase/serverless\`

Install the Neon serverless driver from npm.

**Example:**

\`\`\`javascript
import { neon } from '@neondatabase/serverless';
const sql = neon(process.env.DATABASE_URL);
const result = await sql\`SELECT * FROM users\`;
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > LinkPreview 1`] = `
"## LinkPreview

Values must be provided in [RFC 3339 format](https://tools.ietf.org/html/rfc3339) (Date and Time on the Internet: Timestamps).
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Markdown fundamentals 1`] = `
"## Markdown fundamentals

Regular paragraph with **bold**, _italic_, \`inline code\`, and a [link](https://ranksmile.pl/docs/introduction).

> A standard blockquote.

1. Ordered item one
2. Ordered item two

- Unordered item one
- Unordered item two

\`\`\`sql
SELECT * FROM users WHERE active = true;
\`\`\`

| Column | Type   | Description |
| ------ | ------ | ----------- |
| id     | serial | Primary key |
| name   | text   | User's name |
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > MegaLink 1`] = `
"## MegaLink

**Case Study** Retool uses the Neon API to manage over 300,000 databases. [Learn more](https://neon.com/blog/retool-case-study)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Nested components (known edge case) 1`] = `
"## Nested components (known edge case)

**Note: Code example**

**JavaScript**

\`\`\`javascript
const sql = neon(process.env.DATABASE_URL);
\`\`\`

**Python**

\`\`\`python
conn = psycopg2.connect(os.environ["DATABASE_URL"])
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Production checklist 1`] = `
"## Production checklist

- [ ] [Enable connection pooling](https://ranksmile.pl/docs/test/mdx-conversion-test#pooling)
    Connection pooling reduces latency and improves throughput.
- [ ] [Set up monitoring](https://ranksmile.pl/docs/test/mdx-conversion-test#monitoring)
    Configure alerts for storage and compute usage.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > ProgramForm 1`] = `
"## ProgramForm

[Apply for the Agent Plan](https://ranksmile.pl/use-cases/ai-agents)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > QuoteBlock 1`] = `
"## QuoteBlock

> Neon's branching feature transformed our development workflow.
>
> — Jane Smith, Acme Corp
>
> [Read case study](https://ranksmile.pl/blog/acme-case-study)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Steps 1`] = `
"## Steps

### Create a project

Go to the Neon Console and create a new project.

### Connect your app

Use the connection string from your project dashboard.

### Run migrations

Apply your schema migrations to the database.
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Tabs and TabItem 1`] = `
"## Tabs and TabItem

**SQL**

\`\`\`sql
CREATE TABLE users (id SERIAL PRIMARY KEY, name TEXT);
\`\`\`

**CLI**

\`\`\`bash
neon databases create --name mydb
\`\`\`
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > TechCards 1`] = `
"## TechCards

- [Node.js](https://ranksmile.pl/docs/guides/node): Connect a Node.js app to Neon
- [Python](https://ranksmile.pl/docs/guides/python): Connect a Python app to Neon
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > Testimonial 1`] = `
"## Testimonial

> The serverless scaling is exactly what we needed.
>
> — John Doe, StartupCo
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > TwoColumnLayout 1`] = `
"## TwoColumnLayout
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > YoutubeIframe 1`] = `
"## YoutubeIframe

[Watch on YouTube](https://youtube.com/watch?v=dQw4w9WgXcQ)
"
`;

exports[`MDX to Markdown Conversion > Component conversion test page (snapshot) > should convert every component without raw MDX leaks > preamble 1`] = `
"# MDX Conversion Test Page

Exercises every component the processor handles
"
`;
